2004-08-31  Sven Neumann  <sven@gimp.org>
	* libgimp/gimpuitypes.h
	* libgimpwidgets/gimpwidgetstypes.h: moved the GimpDrawablePreview
	typedef to the header file that it belongs to.

	* libgimp/gimpdrawablepreview.[ch]: minor include cleanups and
	gtk-doc fixes.

2004-08-31  Sven Neumann  <sven@gimp.org>

	* libgimp/Makefile.am
	* libgimp/libgimp-docs.sgml
	* libgimp/libgimp-sections.txt
	* libgimp/libgimp.types
	* libgimp/tmpl/gimpdrawablepreview.sgml: updated for
	GimpDrawablePreview

	* libgimpwidgets/Makefile.am
	* libgimpwidgets/libgimpwidgets-include.c: removed this file, it
	isn't needed since libgimpwidgets doesn't need to be linked
	against libgimp.

	* libgimpwidgets/libgimpwidgets-docs.sgml
	* libgimpwidgets/libgimpwidgets-sections.txt
	* libgimpwidgets/libgimpwidgets.types
	* libgimpwidgets/tmpl/gimppreview.sgml: updated for GimpPreview.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14551 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,22 @@
+2004-08-31  Sven Neumann  <sven@gimp.org>
+
+	* libgimp/Makefile.am
+	* libgimp/libgimp-docs.sgml
+	* libgimp/libgimp-sections.txt
+	* libgimp/libgimp.types
+	* libgimp/tmpl/gimpdrawablepreview.sgml: updated for
+	GimpDrawablePreview
+
+	* libgimpwidgets/Makefile.am
+	* libgimpwidgets/libgimpwidgets-include.c: removed this file, it
+	isn't needed since libgimpwidgets doesn't need to be linked
+	against libgimp.
+
+	* libgimpwidgets/libgimpwidgets-docs.sgml
+	* libgimpwidgets/libgimpwidgets-sections.txt
+	* libgimpwidgets/libgimpwidgets.types
+	* libgimpwidgets/tmpl/gimppreview.sgml: updated for GimpPreview.
+
 2004-08-30  Michael Natterer  <mitch@gimp.org>
 
 	* libgimp/libgimp-sections.txt
