--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2004-08-31  Sven Neumann  <sven@gimp.org>
 
+	* libgimp/gimpuitypes.h
+	* libgimpwidgets/gimpwidgetstypes.h: moved the GimpDrawablePreview
+	typedef to the header file that it belongs to.
+
+	* libgimp/gimpdrawablepreview.[ch]: minor include cleanups and
+	gtk-doc fixes.
+
+2004-08-31  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/gauss.c (gauss_dialog): update the preview when
 	the blur radius is being changed. gimp_coordinates_new() seems to
 	be broken though; there shouldn't be two signal connections needed
