2004-08-31  Michael Natterer  <mitch@gimp.org>
	* app/config/gimpconfig.c (gimp_config_iface_duplicate): set
	construct_param->foo, not construct_param*s*->foo, so we don't set
	the first construct param again and crash.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14554 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-08-31  Michael Natterer  <mitch@gimp.org>
 
+	* app/config/gimpconfig.c (gimp_config_iface_duplicate): set
+	construct_param->foo, not construct_param*s*->foo, so we don't set
+	the first construct param again and crash.
+
+2004-08-31  Michael Natterer  <mitch@gimp.org>
+
 	* plug-ins/common/cubism.c: added "..." to the progress text.
 
 2004-08-31  Michael Natterer  <mitch@gimp.org>
