2004-08-31  Sven Neumann  <sven@gimp.org>
	* plug-ins/common/curve_bend.c: don't use GDK_TOP_LEFT_ARROW
	to restore the default cursor, simply pass NULL to
	gdk_window_set_cursor().


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14557 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-08-31  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/curve_bend.c: don't use GDK_TOP_LEFT_ARROW
+	to restore the default cursor, simply pass NULL to
+	gdk_window_set_cursor().
+
 2004-08-31  Michael Natterer  <mitch@gimp.org>
 
 	* app/paint/gimppaintoptions.[ch]: added "GimpPaintInfo *paint_info"
