2004-08-31  Michael Natterer  <mitch@gimp.org>
	* plug-ins/script-fu/script-fu-scripts.c: removed the script title
	label and moved the "About" button to the action_area. Minor
	cleanups.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14560 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-08-31  Michael Natterer  <mitch@gimp.org>
 
+	* plug-ins/script-fu/script-fu-scripts.c: removed the script title
+	label and moved the "About" button to the action_area. Minor
+	cleanups.
+
+2004-08-31  Michael Natterer  <mitch@gimp.org>
+
 	* app/core/gimpdrawable-transform.[ch]: added GimpProgress
 	parameter to gimp_drawable_transform_affine().
 
