--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-31  Michael Natterer  <mitch@gimp.org>
+
+	* libgimpwidgets/gimppreview.c (gimp_preview_toggle_callback):
+	notify the "update" property on the preview, not the toggle.
+
 2004-08-31  Sven Neumann  <sven@gimp.org>
 
 	* libgimpwidgets/gimppreview.c: allow to pan the preview with all
