2004-08-31  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/gimppreview.c: removed the hardcoded preview size,
	removed some redundant assertions.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14566 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-31  Sven Neumann  <sven@gimp.org>
+
+	* libgimpwidgets/gimppreview.c: removed the hardcoded preview size,
+	removed some redundant assertions.
+
 2004-08-31  Michael Natterer  <mitch@gimp.org>
 
 	* plug-ins/script-fu/script-fu-scripts.[ch]: removed the GUI code...
