--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2004-08-31  Sven Neumann  <sven@gimp.org>
 
+	* libgimpwidgets/gimppreview.c: handle the widget size dynamically.
+	Hide scrollbars when there's nothing to scroll.
+
+	* libgimp/gimpdrawablepreview.c: simplified a lot. The scrollbars
+	are handled completely in the GimpPreview widget now.
+
+2004-08-31  Sven Neumann  <sven@gimp.org>
+
 	* libgimpwidgets/gimppreview.c: removed the hardcoded preview size,
 	removed some redundant assertions.
 
