--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-31  Manish Singh  <yosh@gimp.org>
+
+	* app/plug-in/plug-in.c (plug_in_open): cast plug_in_recv_message
+	to GSourceFunc.
+
 2004-08-31  Sven Neumann  <sven@gimp.org>
 
 	* libgimpwidgets/gimppreview.c: handle the widget size dynamically.
