--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-08-31  Sven Neumann  <sven@gimp.org>
+
+	* libgimp/gimpdrawablepreview.c: added a style property for the
+	minimum size.
+
+	* etc/gtkrc: show how to adjust the size of GimpDrawablePreviews.
+
 2004-08-31  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimpdatafactoryview.c
