2004-08-31  Sven Neumann  <sven@gimp.org>
	* app/widgets/gimpdockable.c
	* libgimp/gimpdrawablepreview.c: converted tabs to spaces.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14572 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-08-31  Sven Neumann  <sven@gimp.org>
 
+	* app/widgets/gimpdockable.c
+	* libgimp/gimpdrawablepreview.c: converted tabs to spaces.
+
+2004-08-31  Sven Neumann  <sven@gimp.org>
+
 	* libgimp/gimpdrawablepreview.c: added a style property for the
 	minimum size.
 
