--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,19 @@
+2004-09-01  Sven Neumann  <sven@gimp.org>
+
+	* app/widgets/gimpdialogfactory.[ch]: added a boolean parameter to
+	gimp_dialog_factory_dialog_new() to let the caller decide whether
+	the window should be presented or not.
+
+	* app/actions/dialogs-commands.c
+	* app/actions/image-commands.c
+	* app/actions/templates-commands.c
+	* app/gui/gui-vtable.c
+	* app/gui/gui.c
+	* app/widgets/gimpsessioninfo.c: changed accordingly. Do not let
+	gimp_dialog_factory_dialog_new() present the dialog if we need to
+	change it after creation. This avoids annoying resizes, noticeable
+	especially with the error dialog.
+
 2004-08-31  Sven Neumann  <sven@gimp.org>
 
 	* app/widgets/gimpdockable.c
