2004-09-01  Sven Neumann  <sven@gimp.org>
	* libgimp/gimpdrawablepreview.c: increased default preview size to
	150 pixels. Added a border of 10 pixels around the bounding box of
	the selection.

	* libgimpwidgets/gimppreview.[ch]: only show the GDK_FLEUR cursor
	if there's something to pan. Set the correct page size on the
	scrollbar adjustments.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14576 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2004-09-01  Sven Neumann  <sven@gimp.org>
 
+	* libgimp/gimpdrawablepreview.c: increased default preview size to
+	150 pixels. Added a border of 10 pixels around the bounding box of
+	the selection.
+
+	* libgimpwidgets/gimppreview.[ch]: only show the GDK_FLEUR cursor
+	if there's something to pan. Set the correct page size on the
+	scrollbar adjustments.
+
+2004-09-01  Sven Neumann  <sven@gimp.org>
+
 	* libgimpwidgets/gimppreviewarea.[ch]: added new function
 	gimp_preview_area_set_offsets().
 
