2004-08-31  Manish Singh  <yosh@gimp.org>
        * plug-ins/pygimp/plug-ins/gimpcons.py
        * plug-ins/pygimp/plug-ins/pdbbrowse.py: remove deprecated mainloop
        calls.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14578 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-08-31  Manish Singh  <yosh@gimp.org>
+
+	* plug-ins/pygimp/plug-ins/gimpcons.py
+	* plug-ins/pygimp/plug-ins/pdbbrowse.py: remove deprecated mainloop
+	calls.
+
 2004-09-01  Sven Neumann  <sven@gimp.org>
 
 	* libgimp/gimpdrawablepreview.c: increased default preview size to
