2004-09-01  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/gimppreview.c: some minor changes, mainly cleanup.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14580 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-01  Sven Neumann  <sven@gimp.org>
+
+	* libgimpwidgets/gimppreview.c: some minor changes, mainly cleanup.
+
 2004-09-01  Manish Singh  <yosh@gimp.org>
 
 	* plug-ins/pygimp/gimpfu.py
