2004-09-01  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/gimppreviewarea.c (CHECK_COLOR): oops, swapped x
	and y variables.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14581 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2004-09-01  Sven Neumann  <sven@gimp.org>
 
+	* libgimpwidgets/gimppreviewarea.c (CHECK_COLOR): oops, swapped x
+	and y variables.
+
 	* libgimpwidgets/gimppreview.c: some minor changes, mainly cleanup.
 
 2004-09-01  Manish Singh  <yosh@gimp.org>
