2004-09-01  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/gimppreview.[ch]: set a busy cursor while the
	preview is being recalculated.

	* libgimp/gimpdrawablepreview.c (gimp_drawable_preview_draw_original):
	do nothing if there's no drawable.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14582 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2004-09-01  Sven Neumann  <sven@gimp.org>
 
+	* libgimpwidgets/gimppreview.[ch]: set a busy cursor while the
+	preview is being recalculated.
+
+	* libgimp/gimpdrawablepreview.c (gimp_drawable_preview_draw_original):
+	do nothing if there's no drawable.
+
+2004-09-01  Sven Neumann  <sven@gimp.org>
+
 	* libgimpwidgets/gimppreviewarea.c (CHECK_COLOR): oops, swapped x
 	and y variables.
 
