2004-09-01  Michael Natterer  <mitch@gimp.org>
	* libgimp/Makefile.am
	* libgimp/gimpui.h
	* libgimp/gimpuitypes.h
	* libgimp/gimpprogressbar.[ch]: new widget GimpProgressBar which
	automatically redirects any progress calls to itself while
	it exists.

	* plug-ins/script-fu/script-fu-interface.c: removed all progress
	callback and simply use a GimpProgressBar.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14583 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2004-09-01  Michael Natterer  <mitch@gimp.org>
+
+	* libgimp/Makefile.am
+	* libgimp/gimpui.h
+	* libgimp/gimpuitypes.h
+	* libgimp/gimpprogressbar.[ch]: new widget GimpProgressBar which
+	automatically redirects any progress calls to itself while
+	it exists.
+
+	* plug-ins/script-fu/script-fu-interface.c: removed all progress
+	callback and simply use a GimpProgressBar.
+
 2004-09-01  Sven Neumann  <sven@gimp.org>
 
 	* libgimpwidgets/gimppreview.[ch]: set a busy cursor while the
