2004-09-02  Sven Neumann  <sven@gimp.org>
	* plug-ins/common/borderaverage.c
	* plug-ins/common/checkerboard.c
	* plug-ins/common/diffraction.c
	* plug-ins/common/illusion.c
	* plug-ins/common/polar.c
	* plug-ins/common/ripple.c
	* plug-ins/common/spread.c
	* plug-ins/common/video.c: don't pass run_mode to
	gimp_rgn_iterator_new(), it's unused. Removes the need for ir being
	a global variable.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14588 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2004-09-02  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/borderaverage.c
+	* plug-ins/common/checkerboard.c
+	* plug-ins/common/diffraction.c
+	* plug-ins/common/illusion.c
+	* plug-ins/common/polar.c
+	* plug-ins/common/ripple.c
+	* plug-ins/common/spread.c
+	* plug-ins/common/video.c: don't pass run_mode to
+	gimp_rgn_iterator_new(), it's unused. Removes the need for ir being
+	a global variable.
+
 2004-09-01  Michael Natterer  <mitch@gimp.org>
 
 	* app/display/gimpdisplay.c
