* Added gimp_composite_addition_va8_va8_va8_mmx(): * Regression tests now include printing the image type for each test. * Regenerated
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14589 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-09-01  Helvetix Victorinox  <helvetix@gimp.org>
+
+	* Added gimp_composite_addition_va8_va8_va8_mmx():
+	* Regression tests now include printing the image type for each test.
+	* Regenerated
+
+
 2004-09-02  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/borderaverage.c
