--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2004-09-02  Sven Neumann  <sven@gimp.org>
+
+	* app/base/base-enums.[ch]
+	* libgimpbase/gimpbaseenums.[ch]: moved GimpCheckSize and
+	GimpCheckType enums to libgimpbase. Correctly prefix the enum
+	values.
+
+	* app/base/temp-buf.c
+	* app/config/gimpdisplayconfig.c
+	* app/display/gimpdisplayshell-render.c
+	* app/pdb/fileops_cmds.c
+	* tools/pdbgen/pdb/fileops.pdb: changed accordingly.
+
 2004-09-02  Michael Natterer  <mitch@gimp.org>
 
 	* plug-ins/script-fu/script-fu-interface.c (script_fu_ok)
