* plug-ins/common/despeckle.c: don't assume the preview has always the   same size, and do the memory allocation in preview_update(). As a side   effect, this fix a segfault :-).  Also save the preview toggle state   between invocations.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14595 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-09-02  DindinX  <david@dindinx.org>
+
+	* plug-ins/common/despeckle.c: don't assume the preview has always the
+	same size, and do the memory allocation in preview_update(). As a side
+	effect, this fix a segfault :-).  Also save the preview toggle state
+	between invocations.
+
 2004-09-02  Sven Neumann  <sven@gimp.org>
 
 	* app/display/gimpdisplayshell-render.c (check_combos): light and
