2004-09-02  Michael Natterer  <mitch@gimp.org>
	* plug-ins/common/neon.c
	* plug-ins/common/noisify.c
	* plug-ins/common/sobel.c
	* plug-ins/common/softglow.c
	* plug-ins/common/spread.c
	* plug-ins/common/unsharp.c: fixed various coding style and naming
	issues and added some missing signal connections to update the new
	previews.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14596 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2004-09-02  Michael Natterer  <mitch@gimp.org>
+
+	* plug-ins/common/neon.c
+	* plug-ins/common/noisify.c
+	* plug-ins/common/sobel.c
+	* plug-ins/common/softglow.c
+	* plug-ins/common/spread.c
+	* plug-ins/common/unsharp.c: fixed various coding style and naming
+	issues and added some missing signal connections to update the new
+	previews.
+
 2004-09-02  DindinX  <david@dindinx.org>
 
 	* plug-ins/common/despeckle.c: don't assume the preview has always the
