--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-09-02  Michael Schumacher <schumaml@cvs.gnome.org>
+
+	* libgimp/gimpui.def
+	* libgimpbase/gimpbase.def
+	* libgimpwidgets/gimpwidgets.def: added the preview and progress
+	related entries  
+
 2004-09-02  Michael Natterer  <mitch@gimp.org>
 
 	* plug-ins/common/neon.c
