2004-09-03  Sven Neumann  <sven@gimp.org>
	* libgimpbase/Makefile.am
	* libgimpbase/gimpchecks.[ch] added gimp_checks_get_shades().

	* app/base/temp-buf.c
	* app/display/gimpdisplayshell-render.c
	* libgimpwidgets/gimppreviewarea.c: use the new function instead
	of replicating these numbers in three different places.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14602 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2004-09-03  Sven Neumann  <sven@gimp.org>
+
+	* libgimpbase/Makefile.am
+	* libgimpbase/gimpchecks.[ch] added gimp_checks_get_shades().
+
+	* app/base/temp-buf.c
+	* app/display/gimpdisplayshell-render.c
+	* libgimpwidgets/gimppreviewarea.c: use the new function instead
+	of replicating these numbers in three different places.
+
 2004-09-03  DindinX  <david@dindinx.org>
 
 	* plug-ins/gimpressionist/*.c: made the code much more readable by
